--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -10,7 +10,15 @@ services:
         - "27017:27017"
     volumes:
         - ${WEBAPP_STORAGE_HOME}/site:/data/db
-
+  
+  rabbitmq:
+    container_name: rabbitmq
+    restart: always
+    ports:
+        - "5672:5672"
+        - "15672:15672"
+    
+        
   esourcing.products:
     container_name: esoursingProducts
     environment:
@@ -30,8 +38,10 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - "SourcingDatabaseSettings:ConnectionString=mongodb://sourcingdb:27017"
+      - "EventBus:HostName=rabbitmq"
     depends_on: 
       - sourcingdb
+      - rabbitmq
     volumes:
       - ${Home}/Microsoft/UserSecrets:/root/.microsoft/usersecrets
       - ${Home}/ASP.NET/Https:/root/.aspnet/https 
