--- a/ESourcing.Order/ESourcing.Order.csproj
+++ b/ESourcing.Order/ESourcing.Order.csproj
@@ -5,4 +5,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Order.Insfrastructure\Ordering.Insfrastructure.csproj" />
+    <ProjectReference Include="..\Ordering.Application\Ordering.Application.csproj" />
+  </ItemGroup>
+
 </Project>
