--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,3 +19,17 @@ services:
       context: .
       dockerfile: ESourcing.Sourcing/Dockerfile
 
+
+  esourcing.apigateway:
+    image: ${DOCKER_REGISTRY-}esourcingapigateway
+    build:
+      context: .
+      dockerfile: ESourcing.APIGateway/Dockerfile
+
+
+  esourcing.order:
+    image: ${DOCKER_REGISTRY-}esourcingorder
+    build:
+      context: .
+      dockerfile: ESourcing.Order/Dockerfile
+
