--- a/ESourcing.APIGateway/ESourcing.APIGateway.csproj
+++ b/ESourcing.APIGateway/ESourcing.APIGateway.csproj
@@ -2,18 +2,17 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
+    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>5115ccbf-50cc-4d33-ad51-cde3472db89b</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.2" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Order.Insfrastructure\Ordering.Insfrastructure.csproj" />
-    <ProjectReference Include="..\Ordering.Application\Ordering.Application.csproj" />
+    <PackageReference Include="Ocelot" Version="18.0.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
 </Project>
